--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "viem": "^2.21.35",
     "wagmi": "^2.12.25"
   },
